--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Cancer Guesser</title>
         <meta name="description" content="A cancer guesser.">
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="assets/main.css">
                 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </head>
@@ -39,8 +39,9 @@
         $.ajax({
             url: action,
             method: 'POST',
-            success: function(){
-                alert("success!");
+            success: function(data){
+                alert(data);
+                alert(data.message);
                 $('form').append('<h3>Submitted form successfully</h3');
             },
             error: function(e){
